--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sahawatts just dont care</title>
+    <title>Antony The Monster's Unofficial Fansite</title>
   </head>
   <body>
     <div id="root"></div>
